--- a/ProjetoGestaoVendas.API/appsettings.json
+++ b/ProjetoGestaoVendas.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-KQI45R3;Database=GestaoVendasDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-KQI45R3;Database=GestaoVendas;Trusted_Connection=True;"
   }
 }
