--- a/ProjetoGestaoVendas.Repositorio/ProjetoGestaoVendas.Repositorio.csproj
+++ b/ProjetoGestaoVendas.Repositorio/ProjetoGestaoVendas.Repositorio.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
